# rust-kolibrios

./: Cargo.toml  Makefile.toml  README.md  build.rs  i686-kolibri.json  link.x
.cargo/: config.toml
examples/: bf.rs  con.rs  dark.rs  hwa.rs
src/: README.md  allocation.rs  dll.rs  func_constants.inc  kos.rs  lib.rs  main.rs  modules.rs  nanolibc.rs  sys.rs  syscalls.S
src/dll/: console.rs
src/kos/: allocator.rs
src/modules/: graphics.rs  input.rs  system.rs  threads.rs  vec.rs  windows.rs
test/: alloc.rs
